--- a/Code/Label_ISCX_Network_Traffic.ipynb
+++ b/Code/Label_ISCX_Network_Traffic.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "%%time\n",
     "#load the data\n",
-    "data = pd.read_csv('ISCX_ISCX_Botnet.csv')"
+    "data = pd.read_csv('../Data/ISCX_ISCX_Botnet.csv')"
    ]
   },
   {
@@ -154,8 +154,8 @@
    "outputs": [],
    "source": [
     "# load ip addresses and the labels\n",
-    "ip1 = pd.read_csv('bots1.csv')\n",
-    "ip2 = pd.read_csv('bots2.csv')"
+    "ip1 = pd.read_csv('../Data/bots1.csv')\n",
+    "ip2 = pd.read_csv('../Data/bots2.csv')"
    ]
   },
   {
@@ -460,7 +460,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "data.to_csv('ISCX_Botnet_Labelled.csv',index=False)"
+    "data.to_csv('../Data/ISCX_Botnet_Labelled.csv',index=False)"
    ]
   },
   {
