--- a/Code/Process_Labelled_Botnet_Traffic_Data.ipynb
+++ b/Code/Process_Labelled_Botnet_Traffic_Data.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "%%time\n",
     "#print('script started!',flush=True)\n",
-    "data = pd.read_csv('ISCX_Botnet_Labelled.csv')"
+    "data = pd.read_csv('../Data/ISCX_Botnet_Labelled.csv')"
    ]
   },
   {
@@ -143,7 +143,7 @@
     "\n",
     "\n",
     "#save data so we can use it later\n",
-    "#data.to_csv('no_nans.csv',index=False)\n",
+    "#data.to_csv('../Data/no_nans.csv',index=False)\n",
     "#print('NaN values replaced with median in %f'%(t2-t1),flush=True)"
    ]
   },
@@ -284,7 +284,7 @@
     "data = data.loc[~outlier_mask]\n",
     "data.drop('Outlier', axis=1, inplace=True)\n",
     "print('data to be saved',flush=True)\n",
-    "#data.to_csv('no_outliers.csv',index=False)\n"
+    "#data.to_csv('../Data/no_outliers.csv',index=False)\n"
    ]
   },
   {
@@ -307,7 +307,7 @@
     "#for label in labels:\n",
     "#    tlbl = label.replace(\" \", \"_\")#if label has space replace it with _\n",
     "#    tdata = data[data['BotNet_Label']==label]\n",
-    "#    tdata.to_csv('Bot_'+tlbl+'.csv',index=False)\n",
+    "#    tdata.to_csv('../Data/Bot_'+tlbl+'.csv',index=False)\n",
     "#    print('Done: ',label,len(tdata))\n",
     "\n",
     "#print('all done', flush=True)"
