--- a/Code/Label_ISCX_Network_Traffic.ipynb
+++ b/Code/Label_ISCX_Network_Traffic.ipynb
@@ -120,8 +120,8 @@
    "outputs": [],
    "source": [
     "## check the max and min values in the features\n",
-    "print(data.max())\n",
-    "#print(data.min())"
+    "#print(data.max())\n",
+    "print(data.min())"
    ]
   },
   {
@@ -163,7 +163,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ip2"
+   ]
   },
   {
    "cell_type": "code",
@@ -412,9 +414,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_src_port = pd.get_dummies(data['Source Port'],prefix='SrcPort')\n",
-    "df_dest_port = pd.get_dummies(data['Destination Port'],prefix='DestPort')\n",
-    "df_protocol = pd.get_dummies(data['Protocol'],prefix='Protocol')"
+    "df_src_port = pd.get_dummies(data['Source Port'],prefix='SrcPort', drop_first = True)\n",
+    "df_dest_port = pd.get_dummies(data['Destination Port'],prefix='DestPort', drop_first = True)\n",
+    "df_protocol = pd.get_dummies(data['Protocol'],prefix='Protocol', drop_first = True)"
    ]
   },
   {
@@ -423,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_src_port.head()"
+    "df_protocol.head()"
    ]
   },
   {
