--- a/Code/Process_Labelled_Botnet_Traffic_Data.ipynb
+++ b/Code/Process_Labelled_Botnet_Traffic_Data.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# get a list of labels where the number of instances is > 10\n",
-    "labels = list(s[s > 10].index)"
+    "labels = list(s[s >= 10].index)"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "f = plt.figure(figsize=(19, 15))\n",
-    "plt.matshow(tmp_df.corr(), fignum=f.number)\n",
+    "plt.matshow(tmp_df.corr().abs(), fignum=f.number)\n",
     "plt.xticks(range(tmp_df.shape[1]), tmp_df.columns, fontsize=14, rotation=45)\n",
     "plt.yticks(range(tmp_df.shape[1]), tmp_df.columns, fontsize=14)\n",
     "cb = plt.colorbar()\n",
@@ -331,8 +331,8 @@
     "# Explore BotNet_Label values\n",
     "s = data['BotNet_Label'].value_counts()\n",
     "\n",
-    "# get a list of labels where the number of instances is > 10\n",
-    "labels = list(s[s > 10].index)\n",
+    "# get a list of labels where the number of instances is >= 10\n",
+    "labels = list(s[s >= 10].index)\n",
     "\n",
     "# remove BotNets where the number of instances is < 10\n",
     "data = data[data['BotNet_Label'].isin(labels)]\n",
@@ -376,8 +376,8 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "#from imblearn.over_sampling import SMOTE \n",
-    "#sm = SMOTE(random_state = 2) \n",
+    "from imblearn.over_sampling import SMOTE \n",
+    "sm = SMOTE(random_state = 2) \n",
     "# separate features from class variable\n",
     "y = data['BotNet_Label']\n",
     "X = data.drop('BotNet_Label', axis=1)\n",
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#type(X)"
+    "data.columns"
    ]
   },
   {
@@ -551,20 +551,20 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "#from sklearn.metrics import confusion_matrix\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "y_pred = gnb.predict(X_test)\n",
     "\n",
-    "#conf_mat = confusion_matrix(y_test, y_pred)\n",
+    "conf_mat = confusion_matrix(y_test, y_pred)\n",
     "# Plot confusion_matrix\n",
-    "#fig, ax = plt.subplots(figsize=(15, 10))\n",
-    "#sns.heatmap(conf_mat, annot=True, cmap = \"Set3\", fmt =\"d\",\n",
-    "#xticklabels=targets, yticklabels=targets)\n",
-    "#plt.ylabel('Actual')\n",
-    "#plt.xlabel('Predicted')\n",
-    "#plt.show()\n"
+    "fig, ax = plt.subplots(figsize=(15, 10))\n",
+    "sns.heatmap(conf_mat, annot=True, cmap = \"Set3\", fmt =\"d\",\n",
+    "xticklabels=targets, yticklabels=targets)\n",
+    "plt.ylabel('Actual')\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.show()\n"
    ]
   },
   {
